# digdit

./: CMakeLists.txt  build_web2.sh  build_web3.sh  main.cpp
shaders/: bloomlight-cgpt.glsl  clay.fs.glsl  simple_noise.fs.glsl  starfield.fs.glsl
shaders/glsl330/: starfield.fs.glsl
src/: Hero.cpp  Hero.h  Physical.cpp  Physical.h  StarBackground.cpp  StarBackground.h
